--- a/index.html
+++ b/index.html
@@ -1,88 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>Homeworks 8</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <section class="main">
-      <div class="container">
+    <link rel="stylesheet" href="css/style.css"/>
+</head>
+<body>
+<section class="main">
+    <div class="container">
         <header class="header">
-          <img src="img/logo.png" alt="logo" />
+            <img src="img/logo.png" alt="logo"/>
         </header>
         <div class="wrapper">
-          <div class="form-box">
-            <h1 class="form-header">Get your free account</h1>
-            <div class="form-text">
-              Try homeWorks BUSINESS free for 15 days. Downgrade to Basic (Free
-              Forever) anytime.
-            </div>
-            <form action="">
-              <label for="">
-                Full Name
-                <input
-                  type="text"
-                  class="form-input"
-                  name="full-name"
-                  id="full-name-input"
-                />
-              </label>
-              <label for="">
-                Your username
-                <input type="text" class="form-input" name="username" />
-              </label>
-              <label for="">
-                E-mail
-                <input type="text" class="form-input" name="email" id="email" />
-              </label>
-              <label for="">
-                Password
-                <input type="password" class="form-input" name="password" />
-              </label>
-              <label for="">
-                Repeat Password
-                <input
-                  type="password"
-                  class="form-input"
-                  name="password-repeat"
-                  id="repeat-password"
-                />
-              </label>
-              <label for="" class="checkbox-label">
-                <input
-                  type="checkbox"
-                  class="form-checkbox"
-                  name=""
-                  id="checkbox"
-                />Agree to our Terms of Service and Privacy Statement
-              </label>
-            </form>
-            <div class="last-block">
-              <button class="button" id="button">Sign Up</button>
-            </div>
+            <div class="form-box">
+                <h1 class="form-header">Get your free account</h1>
+                <div class="form-text">
+                    Try homeWorks BUSINESS free for 15 days. Downgrade to Basic (Free
+                    Forever) anytime.
+                </div>
+                <form action="">
+                    <label for="">
+                        Full Name
+                        <input
+                                type="text"
+                                class="form-input"
+                                name="full-name"
+                                id="full-name-input"
+                        />
+                    </label>
+                    <label for="">
+                        Your username
+                        <input type="text" class="form-input" name="username"/>
+                    </label>
+                    <label for="">
+                        E-mail
+                        <input type="email" class="form-input" name="email" id="email"/>
+                    </label>
+                    <label for="">
+                        Password
+                        <input type="password" class="form-input" name="password"/>
+                    </label>
+                    <label for="">
+                        Repeat Password
+                        <input
+                                type="password"
+                                class="form-input"
+                                name="password-repeat"
+                                id="repeat-password"
+                        />
+                    </label>
+                    <label for="" class="checkbox-label">
+                        <input
+                                type="checkbox"
+                                class="form-checkbox"
+                                name=""
+                                id="checkbox"
+                        />Agree to our Terms of Service and Privacy Statement
+                    </label>
+                    <div class="last-block">
+                        <button class="button" id="button" type="submit">Sign Up</button>
+                    </div>
+                    <div class="last-block">
+                        <a href="" class="link" id="link">Already have an account?</a>
+                    </div>
+                </form>
 
-            <div class="last-block">
-              <a href="" class="link" id="link">Already have an account?</a>
             </div>
-          </div>
-          <div class="picture-box">
-            <img src="img/1.png" alt="rocket" />
-          </div>
+            <div class="picture-box">
+                <img src="img/1.png" alt="rocket"/>
+            </div>
         </div>
-      </div>
-      <div id="myModal" class="modal">
+    </div>
+    <div id="myModal" class="modal">
         <div class="modal-content">
-          <div class="modal-wrapper">
-            <p>
-              На вашу почту выслана ссылка, перейдите по ней, чтобы завершить
-              регистрацию
-            </p>
-            <button id="okButton" class="button">OK</button>
-          </div>
+            <div class="modal-wrapper">
+                <p>
+                    На вашу почту выслана ссылка, перейдите по ней, чтобы завершить
+                    регистрацию
+                </p>
+                <button id="okButton" class="button">OK</button>
+            </div>
         </div>
-      </div>
-    </section>
-    <script src="js/script.js"></script>
-  </body>
+    </div>
+</section>
+<script src="js/script.js"></script>
+</body>
 </html>
